# docx-rs

./: Cargo.toml
examples/: read.rs
src/: app.rs  comments.rs  content_type.rs  core.rs  docx.rs  error.rs  rels.rs
src/document/: body.rs  bookmark_end.rs  bookmark_start.rs  break.rs  comment_range.rs  drawing.rs  hyperlink.rs  mod.rs  paragraph.rs  run.rs  table_cell.rs  table_row.rs
src/font_table/: charset.rs  family.rs  font.rs  mod.rs  pitch.rs
src/formatting/: bold.rs  borders.rs  character_property.rs  color.rs  dstrike.rs  fonts.rs  indent_level.rs  italics.rs  justification.rs  mod.rs  numbering_id.rs  numbering_property.rs  outline.rs  paragraph_property.rs  size.rs  spacing.rs  strike.rs  table_borders.rs  table_cell_property.rs  table_indent.rs  table_justification.rs  table_property.rs  table_row_property.rs  table_width.rs  underline.rs
src/formatting/border/: between_border.rs  bottom_border.rs  left_border.rs  right_border.rs  top_border.rs
src/numbering/: level.rs  mod.rs
src/styles/: default_style.rs  mod.rs  style.rs
