[package]
name = "docx"
version = "1.2.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PoiScript/docx-rs"
description = "A Rust library for parsing and generating docx files."
keywords = ["docx", "generator", "openxml", "parser"]

[features]
enable_log = ["hard-xml/log"]

[dependencies]
derive_more = "0.99.5"
log = "0.4.8"
hard-xml = { git="https://github.com/s3bk/hard-xml", version = "1.21" }

[dependencies.zip]
default-features = false
features = ["deflate", "time"]
version = "0.6.2"

[dev-dependencies]
env_logger = "0.10"
